syntax = "proto3";
package permission;

option go_package = "nfxid/protos/gen/permission/permission;permissionpb";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

// 权限信息
message Permission {
  string id = 1; // 权限ID (UUID)
  string tag = 2; // 权限标签，e.g., "addUser", "deleteUser", "viewUsers"
  string name = 3; // 人类可读的名称，e.g., "Add User"
  optional string description = 4; // 描述
  optional string category = 5; // 分类：user, role, permission, system
  bool is_system = 6; // 是否为系统权限（系统权限不能删除）
  google.protobuf.Timestamp created_at = 7; // 创建时间
  google.protobuf.Timestamp updated_at = 8; // 更新时间
  optional google.protobuf.Timestamp deleted_at = 9; // 软删除时间
}

// Permission 服务
service PermissionService {
  // 根据ID获取权限
  rpc GetPermissionByID (GetPermissionByIDRequest) returns (GetPermissionByIDResponse);
  
  // 根据Tag获取权限
  rpc GetPermissionByTag (GetPermissionByTagRequest) returns (GetPermissionByTagResponse);
  
  // 根据Tag列表批量获取权限
  rpc GetPermissionsByTags (GetPermissionsByTagsRequest) returns (GetPermissionsByTagsResponse);
  
  // 根据Category获取权限列表
  rpc GetPermissionsByCategory (GetPermissionsByCategoryRequest) returns (GetPermissionsByCategoryResponse);
  
  // 获取所有权限列表（支持分页和过滤）
  rpc GetAllPermissions (GetAllPermissionsRequest) returns (GetAllPermissionsResponse);
}

// Permission Service Messages
message GetPermissionByIDRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetPermissionByIDResponse {
  Permission permission = 1;
}

message GetPermissionByTagRequest {
  string tag = 1 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 100];
}

message GetPermissionByTagResponse {
  Permission permission = 1;
}

message GetPermissionsByTagsRequest {
  repeated string tags = 1 [(buf.validate.field).repeated = {min_items: 1, max_items: 100}];
}

message GetPermissionsByTagsResponse {
  repeated Permission permissions = 1;
}

message GetPermissionsByCategoryRequest {
  string category = 1 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 50];
}

message GetPermissionsByCategoryResponse {
  repeated Permission permissions = 1;
}

message GetAllPermissionsRequest {
  int32 page = 1 [(buf.validate.field).int32.gte = 1];
  int32 page_size = 2 [(buf.validate.field).int32 = {gte: 1, lte: 100}];
  optional string category = 3; // 按分类过滤
  optional string search = 4; // 搜索权限名称或标签
  optional bool is_system = 5; // 过滤系统权限
}

message GetAllPermissionsResponse {
  repeated Permission permissions = 1;
  int32 total = 2;
}

