syntax = "proto3";
package user_permission;

option go_package = "nfxid/protos/gen/permission/user_permission;userpermissionpb";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "permission/permission.proto";

// 用户权限关联信息
message UserPermission {
  string id = 1; // 关联ID (UUID)
  string user_id = 2; // 用户ID (UUID)，引用 auth.users(id)
  string permission_id = 3; // 权限ID (UUID)
  google.protobuf.Timestamp created_at = 4; // 创建时间
  optional google.protobuf.Timestamp deleted_at = 5; // 软删除时间
  permission.Permission permission = 6; // 嵌套的权限信息
}

// UserPermission 服务
service UserPermissionService {
  // 根据ID获取用户权限关联
  rpc GetUserPermissionByID (GetUserPermissionByIDRequest) returns (GetUserPermissionByIDResponse);
  
  // 根据UserID获取用户权限列表
  rpc GetUserPermissionsByUserID (GetUserPermissionsByUserIDRequest) returns (GetUserPermissionsByUserIDResponse);
  
  // 根据PermissionID获取用户权限列表
  rpc GetUserPermissionsByPermissionID (GetUserPermissionsByPermissionIDRequest) returns (GetUserPermissionsByPermissionIDResponse);
  
  // 根据UserID获取权限标签列表（仅返回标签，不包含完整权限信息）
  rpc GetPermissionTagsByUserID (GetPermissionTagsByUserIDRequest) returns (GetPermissionTagsByUserIDResponse);
  
  // 检查用户是否拥有指定权限标签
  rpc CheckUserPermission (CheckUserPermissionRequest) returns (CheckUserPermissionResponse);
  
  // 获取所有用户权限关联列表（支持分页和过滤）
  rpc GetAllUserPermissions (GetAllUserPermissionsRequest) returns (GetAllUserPermissionsResponse);
}

// UserPermission Service Messages
message GetUserPermissionByIDRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetUserPermissionByIDResponse {
  UserPermission user_permission = 1;
}

message GetUserPermissionsByUserIDRequest {
  string user_id = 1 [(buf.validate.field).string.uuid = true];
  optional bool include_permission = 2; // 是否包含权限详细信息
}

message GetUserPermissionsByUserIDResponse {
  repeated UserPermission user_permissions = 1;
}

message GetUserPermissionsByPermissionIDRequest {
  string permission_id = 1 [(buf.validate.field).string.uuid = true];
  optional bool include_permission = 2; // 是否包含权限详细信息
}

message GetUserPermissionsByPermissionIDResponse {
  repeated UserPermission user_permissions = 1;
}

message GetPermissionTagsByUserIDRequest {
  string user_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetPermissionTagsByUserIDResponse {
  repeated string tags = 1; // 权限标签列表
}

message CheckUserPermissionRequest {
  string user_id = 1 [(buf.validate.field).string.uuid = true];
  string tag = 2 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 100];
}

message CheckUserPermissionResponse {
  bool has_permission = 1;
}

message GetAllUserPermissionsRequest {
  int32 page = 1 [(buf.validate.field).int32.gte = 1];
  int32 page_size = 2 [(buf.validate.field).int32 = {gte: 1, lte: 100}];
  optional string user_id = 3 [(buf.validate.field).string.uuid = true]; // 按用户ID过滤
  optional string permission_id = 4 [(buf.validate.field).string.uuid = true]; // 按权限ID过滤
  optional string permission_category = 5; // 按权限分类过滤
  optional bool include_permission = 6; // 是否包含权限详细信息
}

message GetAllUserPermissionsResponse {
  repeated UserPermission user_permissions = 1;
  int32 total = 2;
}

